# digidoc-extensions

./: CMakeLists.txt  README.md
DigiDocQL/: CMakeLists.txt  GeneratePreviewForURL.mm  GeneratePreviewForURL.mm.cmake  Info.plist  Info.plist.cmake  PreviewViewController.entitlements  PreviewViewController.mm
DigiDocQL/Base.lproj/: PreviewViewController.xib
kde/: CMakeLists.txt  qdigidoc-signer.desktop.cmake
nautilus/: CMakeLists.txt  nautilus-qdigidoc.py  nautilus-qdigidoc.py.cmake  nautilus-qdigidoc.py.in
nautilus/po/: et.po  et.po.cmake  nautilus-qdigidoc.pot.cmake  ru.po  ru.po.cmake
windows/: CMakeLists.txt  EsteidShellExtension.rc  EsteidShellExtension.wxs  EsteidShlExt.cpp  EsteidShlExt.h  resource.h  targetver.h
